tests/snapshots/doctor__doctor_renders_the_actions_token.snap
---
source: tests/doctor.rs
expression: output.stdout
---
Environment
  ✔ gh CLI           gh version 2.62.0 (2024-01-01)
  ✔ Authentication   github.com as tester
  ! Token type       Actions GITHUB_TOKEN
    Scopes           issues

Resources
  ✘ repository    requires Administration: write, which cannot be granted to GITHUB_TOKEN
  ✘ topics        requires Administration: write, which cannot be granted to GITHUB_TOKEN
  ✔ labels
  ✘ autolinks     requires Administration: write, which cannot be granted to GITHUB_TOKEN
  ✘ rulesets      requires Administration: write, which cannot be granted to GITHUB_TOKEN
  ✘ environments  requires Administration: write, which cannot be granted to GITHUB_TOKEN
  ✘ variables     requires Variables: write, which cannot be granted to GITHUB_TOKEN
  ✔ pages

  ✘ extends       requires Contents: read on the *other* repository, which GITHUB_TOKEN does not have

→ Use a personal access token or a GitHub App installation token.
  See https://noirbizarre.github.io/gh-settings/authentication/
