tests/snapshots/doctor__doctor_renders_the_unknown_verdict.snap
---
source: tests/doctor.rs
expression: output.stdout
---
Environment
  ✔ gh CLI           gh version 2.62.0 (2024-01-01)
  ✔ Authentication   github.com as tester
  ✔ Token type       fine-grained personal access token
    Scopes           not reported by this token type

Resources
  ? repository  cannot determine from this token type
  ? topics      cannot determine from this token type
  ? labels      cannot determine from this token type
  ? autolinks   cannot determine from this token type
  ? rulesets    cannot determine from this token type
